--- a/example/style.css
+++ b/example/style.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  background-color: #cbd5e1;
+  background-color: #f8fafc;
   font-family: 'Inter', sans-serif;
 }
 
@@ -23,41 +23,68 @@ body {
   align-items: center;
 }
 
+.header {
+  background-color: #475569;
+  width: 100%;
+  text-align: center;
+}
+
+.header h1 {
+  font-size: 28px;
+  font-weight: 500;
+  color: #f8fafc;
+  padding: 20px 0;
+}
+
+.content {
+  display: flex;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.left,
+.right {
+  width: 50%;
+  margin: 0 30px;
+}
+
+.left {
+  margin-right: 15px;
+}
+
+.right {
+  margin-left: 15px;
+}
+
 .block {
-  width: 85%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid #64748b;
   border-radius: 8px;
-  margin-bottom: 30px;
-  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
-  background-color: #f1f5f9;
-  max-width: 500px;
+  margin: 10px 0;
 }
 
-.block#first-child {
-  margin: 30px 0;
-}
-
-h2 {
-  font-size: 26px;
-  font-weight: 600;
-  color: #1f2937;
-  background-color: #f1f5f9;
-  padding: 24px 0;
+.block h2 {
+  font-size: 24px;
   width: 100%;
-  text-align: center;
+  font-weight: 500;
+  color: #1f2937;
+  margin: 10px 0;
   border-radius: 8px 8px 0 0;
+}
+
+.block p {
+  margin: 6px 0 20px 0;
+  width: 100%;
 }
 
 textarea {
   border: 1px solid #64748b;
   background-color: #f8fafc;
   padding: 16px;
-  margin-bottom: 28px;
-  width: 350px;
+  margin-bottom: 10px;
+  width: calc(100% - 32px);
   height: 100px;
   font-size: 18px;
   font-family: 'Inter', sans-serif;
@@ -73,4 +100,19 @@ textarea:hover {
 
 textarea:focus {
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.08);
+}
+
+textarea::placeholder {
+  color: #9ca3af;
+}
+
+p#terminal {
+  background-color: #1e293b;
+  color: #f8fafc;
+  width: calc(100% - 32px);
+  padding: 12px 16px;
+}
+
+pre code {
+  text-align: left;
 }
