--- a/example/style.css
+++ b/example/style.css
@@ -36,6 +36,11 @@ body {
   padding: 20px 0;
 }
 
+.header p {
+  color: #f8fafc;
+  margin-bottom: 20px;
+}
+
 .content {
   display: flex;
   width: 100%;
@@ -60,7 +65,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
   border-radius: 8px;
   margin: 10px 0;
 }
@@ -113,6 +118,15 @@ p#terminal {
   padding: 12px 16px;
 }
 
-pre code {
-  text-align: left;
+.showCodeBtn {
+  background-color: #cbd5e1;
+  padding: 10px 20px;
+  border-radius: 8px;
+  margin-top: 6px;
+  transition: all 0.2s;
+}
+
+.showCodeBtn:hover {
+  background-color: #d0d9e3;
+  cursor: pointer;
 }
